Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjObjectField.quorum
class Main
    Object v
    v:SetValue()
    action Main
        Test(v)
    end

    action Test(Integer var)
    end
end
